# qtTesting

./: .gitignore  CMakeLists.txt  main.cpp  test.cpp
.github/workflows/: c-cpp.yml
include/: MainWindow.hpp  ScreenShot.hpp
source/: MainWindow.cpp  ScreenShot.cpp  mainwindow.ui
testcase/: TestMainWindow.hpp  TestQString.hpp
